Fix the overlay not visible issue

--- a/packages/blocks-next/src/blocks/product-quick-view/style.scss
+++ b/packages/blocks-next/src/blocks/product-quick-view/style.scss
@@ -98,8 +98,6 @@
 		&.active {
 			visibility: visible;
 			pointer-events: all;
-		}
-		&.show-opening-animation.active {
 			animation: both sc-turn-on-visibility 0.25s;
 		}
 		&.show-closing-animation {
